--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -524,6 +524,7 @@ footer {
         flex-direction: column;
         justify-content: center;
         text-align: center;
+        box-shadow: 0 10px 40px rgba(187, 187, 187, 0.3);
         span {
             font-size: 48px;
             @extend %roboto-700;
@@ -550,6 +551,96 @@ footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
+    }
+}
+
+.blog {
+    padding: 50px 0 165px;
+    background-image: url("../images/blog-bg.svg");
+    background-repeat: no-repeat;
+    background-position: center center;
+    &__items {
+        display: flex;
+        justify-content: space-between;
+        position: relative;
+        &::after {
+            content: "";
+            position: absolute;
+            right: -20px;
+            top: -25px;
+            width: 126px;
+            height: 53px;
+            background-image: url("../images/decor/blog-decor.svg");
+            z-index: -1;
+        }
+    }
+    &__item {
+        max-width: 370px;
+        border: 1px solid #ececec;
+        transition: all 0.3s;
+        &:hover {
+            box-shadow: 20px 0 60px rgba(202, 202, 202, 0.35);
+            border: none;
+            .blog__item-link {
+                color: $accent;
+                &::after {
+                    background-image: url("../images/icon/arrow-accent.svg");
+                }
+            }
+        }
+    }
+    &__item-imglink {
+        display: block;
+        img {
+            height: 288px;
+            object-fit: cover;
+        }
+    }
+    &__item-box {
+        padding: 30px 40px;
+    }
+    &__item-info {
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 25px;
+    }
+    &__item-autor,
+    &__item-data {
+        padding-left: 30px;
+        position: relative;
+        &::before {
+            content: "";
+            position: absolute;
+            width: 20px;
+            height: 20px;
+            left: 0;
+            top: 4px;
+        }
+    }
+    &__item-autor::before {
+        background-image: url("../images/icon/user-grey.svg");
+    }
+    &__item-data::before {
+        background-image: url("../images/icon/time.svg");
+    }
+    &__item-title {
+        color: $title;
+        @extend %roboto-400;
+        font-size: 22px;
+        margin-bottom: 25px;
+    }
+    &__item-link {
+        position: relative;
+        transition: all 0.3s;
+    }
+    &__item-link::after {
+        content: "";
+        width: 10px;
+        height: 8px;
+        background-image: url("../images/icon/arrow.svg");
+        position: absolute;
+        top: 8px;
+        right: -14px;
     }
 }
 
