--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -155,6 +155,18 @@ footer {
     }
 }
 
+.top {
+    &__container {
+        max-width: 1700px;
+        margin: 0 auto;
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: top center;
+        padding: 135px 0 140px;
+        text-align: center;
+    }
+}
+
 .top-slider {
     background-image: url("../images/decor/top-slider-bg.png");
     background-repeat: no-repeat;
@@ -641,6 +653,55 @@ footer {
         position: absolute;
         top: 8px;
         right: -14px;
+    }
+}
+
+.modal {
+    padding-top: 120px;
+    max-width: 570px;
+    margin: 0 auto 120px;
+    &__links {
+        text-align: center;
+        margin-bottom: 60px;
+    }
+    &__link {
+        color: #909090;
+        font-size: 22px;
+        @extend %roboto-400;
+        text-transform: uppercase;
+        margin: 0 30px;
+    }
+    &__link--active {
+        color: $accent;
+    }
+    &__label {
+        display: block;
+        margin-bottom: 40px;
+    }
+    &__input {
+        display: block;
+        width: 100%;
+        border: none;
+        background-color: $bg;
+        margin-top: 4px;
+        height: 60px;
+        padding: 0 15px;
+    }
+    &__btn {
+        display: block;
+        background-color: $title;
+        text-transform: uppercase;
+        @extend %roboto-400;
+        color: #fff;
+        padding: 14px 0;
+        border: none;
+        width: 100%;
+        cursor: pointer;
+    }
+    &__error {
+        display: inline-block;
+        margin-top: 20px;
+        color: $accent;
     }
 }
 
