--- a/app/scss/_vars.scss
+++ b/app/scss/_vars.scss
@@ -31,6 +31,14 @@ $bg: #f6f6f6;
     @extend %roboto-400;
     box-shadow: 0 7px 20px rgba(255, 17, 48, 0.3);
 }
+
+%checkbox-hidden {
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
+    clip: rect(0 0 0 0);
+    position: absolute;
+}
 @function max($numbers...) {
     @return m#{a}x(#{$numbers});
 }
