--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1707,4 +1707,131 @@ footer {
   }
 }
 
+.blog-one {
+  &__text {
+    border: 1px solid #ececec;
+    border-top: none;
+    padding: 30px;
+    margin-top: -1px;
+    h4 {
+      color: $title;
+      font-size: 22px;
+      @extend %roboto-700;
+      margin: 25px 0;
+    }
+    p {
+      margin: 25px 0;
+    }
+    blockquote {
+      background-color: $bg;
+      border-left: 3px solid $accent;
+      padding: 35px;
+      color: $title;
+      font-size: 22px;
+      @extend %roboto-400;
+      margin: 25px 0;
+    }
+  }
+  &__left-img {
+    float: left;
+    margin-right: 30px;
+    margin-bottom: 10px;
+  }
+  &__right-img {
+    float: right;
+    margin-left: 30px;
+    margin-bottom: 10px;
+  }
+  &__info {
+    display: flex;
+    margin-bottom: 25px;
+  }
+  &__info-link {
+    margin-right: 30px;
+    padding-left: 28px;
+    position: relative;
+    &::before {
+      content: "";
+      position: absolute;
+      left: 0;
+      top: 0;
+      background-image: url(../images/icon/calendar.svg);
+      width: 16px;
+      height: 16px;
+    }
+  }
+  &__info-link--comment::before {
+    background-image: url(../images/icon/comment.svg);
+    top: 3px;
+  }
+  &__info-link--author::before {
+    background-image: url(../images/icon/user-blog.svg);
+  }
+  &__form-title {
+    text-transform: uppercase;
+    margin: 35px 0 25px;
+    color: $title;
+    font-size: 24px;
+    @extend %roboto-700;
+  }
+  .comments-form {
+    border-bottom: none;
+  }
+  &__box {
+    margin: 25px 0 35px;
+    display: flex;
+    justify-content: space-between;
+  }
+  &__tags,
+  &__share {
+    span {
+      text-transform: uppercase;
+      color: $title;
+      @extend %roboto-700;
+    }
+  }
+  &__share {
+    a {
+      margin-right: 12px;
+      vertical-align: middle;
+      &:hover {
+        path {
+          fill: $accent;
+        }
+      }
+      path {
+        fill: #727272;
+      }
+    }
+  }
+  &__author {
+    border-bottom: 1px solid #ececec;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    display: flex;
+  }
+  &__author-img {
+    width: 140px;
+    height: 140px;
+    margin-right: 30px;
+    object-fit: cover;
+  }
+  &__author-name {
+    @extend %roboto-700;
+    font-size: 22px;
+    margin-bottom: 24px;
+    color: $title;
+  }
+  .comments-form__text-input {
+    width: 370px;
+  }
+  .comments-title {
+    @extend %roboto-700;
+    text-transform: uppercase;
+    margin-bottom: 25px;
+    color: $title;
+    font-size: 24px;
+  }
+}
+
 @import "media";
