--- a/app/index.njk
+++ b/app/index.njk
@@ -21,6 +21,8 @@
       {% include 'app/module/_product/_product.html' %}
 
       {% include 'app/module/_promo/_promo.html' %}
+
+      {% include 'app/module/_from-blog/_from-blog.html' %}
       
     </main>
 
