--- a/app/scss/index.scss
+++ b/app/scss/index.scss
@@ -12,3 +12,4 @@
 @import "../module/_video-fashion/_video-fashion";
 @import "../module/_product/_product";
 @import "../module/_promo/_promo";
+@import "../module/_from-blog/_from-blog";
