--- a/app/module/_blog-one/_blog-one.scss
+++ b/app/module/_blog-one/_blog-one.scss
@@ -644,3 +644,141 @@
     }
   }
 }
+
+@media (max-width: 1230px) {
+  .person,
+  .latest-post {
+    display: none;
+  }
+  .blog-page {
+    .filter-category,
+    .filter-popular {
+      display: none;
+    }
+    &__inner {
+      flex-direction: column;
+    }
+    &__content {
+      width: 100%;
+      margin-right: 0;
+    }
+    &__aside {
+      width: 100%;
+      order: -1;
+    }
+    &__img {
+      max-width: 100%;
+      width: 100%;
+    }
+  }
+  .blog-one {
+    .comments-form__text-input {
+      width: 570px;
+    }
+    &__text {
+      padding-bottom: 145px;
+    }
+  }
+  .filter-search {
+    &__input {
+      width: 100%;
+    }
+  }
+}
+@media (max-width: 850px) {
+  .blog-one {
+    &__text {
+      padding: 30px;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .page {
+    padding: 60px 0;
+    &__item-box {
+      padding: 20px;
+    }
+    &__img {
+      height: 260px;
+    }
+  }
+  .blog-one {
+    &__text {
+      padding: 20px 10px;
+    }
+    &__info {
+      display: block;
+    }
+    &__info-item {
+      margin-bottom: 10px;
+    }
+    .comments-form {
+      padding-bottom: 0;
+    }
+    .comments-form__text-input {
+      max-width: 100%;
+      width: 100%;
+    }
+    &__box {
+      flex-wrap: wrap;
+    }
+    &__tags {
+      padding-right: 10px;
+    }
+  }
+  .comments-form {
+    &__box-input {
+      display: block;
+      margin-bottom: 0;
+    }
+    &__text-input {
+      margin-bottom: 30px;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .blog-one {
+    &__box {
+      display: block;
+    }
+    &__author-img {
+      display: none;
+    }
+    &__text {
+      blockquote {
+        padding: 10px;
+      }
+    }
+  }
+  .comments {
+    &__img {
+      display: none;
+    }
+  }
+}
+@media (max-width: 375px) {
+  .blog-page {
+    &__item-box {
+      padding: 10px 5px;
+    }
+    &__img {
+      height: 170px;
+    }
+    &__slider {
+      .slick-next {
+        right: 10px;
+      }
+      .slick-prev {
+        left: 10px;
+      }
+    }
+  }
+
+  .filter {
+    &__item-title {
+      padding: 25px 15px;
+    }
+  }
+}
