--- a/app/module/_contact/_contact.scss
+++ b/app/module/_contact/_contact.scss
@@ -98,3 +98,57 @@
     letter-spacing: 3.2px;
   }
 }
+
+@media (max-width: 1100px) {
+  .contact {
+    &__inner {
+      display: block;
+    }
+    &__info {
+      margin-right: 0;
+      max-width: 100%;
+      margin-bottom: 30px;
+    }
+    &__form {
+      box-shadow: none;
+      padding: 0;
+    }
+    &__form-box {
+      display: block;
+      input {
+        width: 100%;
+      }
+    }
+  }
+}
+@media (max-width: 450px) {
+  .map {
+    padding: 60px 0;
+  }
+  #map {
+    height: 250px;
+  }
+  .contact {
+    &__info-title {
+      font-size: 28px;
+      line-height: 34px;
+    }
+  }
+}
+
+@media (max-width: 375px) {
+  .contact {
+    &__info-item {
+      padding-left: 55px;
+      &::before {
+        width: 50px;
+        height: 50px;
+        top: 1px;
+      }
+      &::after {
+        top: 16px;
+        left: 16px;
+      }
+    }
+  }
+}
