--- a/app/module/_promo/_promo.scss
+++ b/app/module/_promo/_promo.scss
@@ -60,94 +60,51 @@
   }
 }
 
-.blog {
-  padding: 50px 0 165px;
-  background-image: url("../images/blog-bg.svg");
-  background-repeat: no-repeat;
-  background-position: center center;
-  &__items {
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-    &::after {
-      content: "";
-      position: absolute;
-      right: -20px;
-      top: -25px;
-      width: 126px;
-      height: 53px;
-      background-image: url("../images/decor/blog-decor.svg");
-      z-index: -1;
+@media (max-width: 620px) {
+  .promo {
+    padding: 60px 0;
+    &__clock {
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+    &__clock-item {
+      margin: 20px 36px;
     }
   }
-  &__item {
-    max-width: 370px;
-    border: 1px solid #ececec;
-    transition: all 0.3s;
-    &:hover {
-      box-shadow: 20px 0 60px rgba(202, 202, 202, 0.35);
-      border: none;
-      .blog__item-link {
-        color: $accent;
-        &::after {
-          background-image: url("../images/icon/arrow-accent.svg");
-        }
-      }
+  .partners {
+    padding: 60px 0;
+    &__list {
+      flex-wrap: wrap;
+      justify-content: center;
+      height: auto;
     }
-  }
-  &__item-imglink {
-    display: block;
-    img {
-      height: 288px;
-      object-fit: cover;
+    &__item {
+      margin: 10px 36px;
     }
-  }
-  &__item-box {
-    padding: 30px 40px;
-  }
-
-  &__item-title {
-    color: $title;
-    @extend %roboto-400;
-    font-size: 22px;
-    margin-bottom: 25px;
-  }
-  &__item-link {
-    position: relative;
-    transition: all 0.3s;
-  }
-  &__item-link::after {
-    content: "";
-    width: 10px;
-    height: 8px;
-    background-image: url("../images/icon/arrow.svg");
-    position: absolute;
-    top: 8px;
-    right: -14px;
   }
 }
-
-.blog-box {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 25px;
-  &__autor,
-  &__data {
-    padding-left: 30px;
-    position: relative;
-    &::before {
-      content: "";
-      position: absolute;
-      width: 20px;
-      height: 20px;
-      left: 0;
-      top: 4px;
+@media (max-width: 500px) {
+  .partners {
+    &__item {
+      margin: 10px 20px;
     }
   }
-  &__autor::before {
-    background-image: url("../images/icon/user-grey.svg");
+}
+@media (max-width: 450px) {
+  .promo {
+    &__clock {
+      margin-top: 30px;
+    }
+    &__clock-item {
+      margin: 11px;
+    }
+    &__link {
+      margin-top: 30px;
+    }
   }
-  &__data::before {
-    background-image: url("../images/icon/time.svg");
+  .partners {
+    &__item {
+      margin: 10px 10px;
+    }
   }
 }
