--- a/app/module/_shop/_shop.scss
+++ b/app/module/_shop/_shop.scss
@@ -7,6 +7,9 @@
     width: 370px;
     margin-right: 30px;
   }
+  &__filter-btn {
+    display: none;
+  }
 }
 
 .shop-content {
@@ -46,6 +49,90 @@
       }
     }
   }
+}
+.jq-selectbox__select {
+  margin-left: 30px;
+  height: 32px;
+  padding: 0 30px 0 0;
+  background: transparent;
+  box-shadow: none;
+  color: $default;
+  text-shadow: none;
+  border: none;
+  @extend %quicksand-500;
+  &:hover {
+    background: transparent;
+  }
+}
+
+.jq-selectbox__trigger {
+  border-left: none;
+}
+
+.jq-selectbox__trigger-arrow {
+  position: absolute;
+  width: 10px;
+  height: 5px;
+  top: 12px;
+  right: 12px;
+  border: none;
+  background-image: url("../images/icon/angle-down.svg");
+}
+
+.jq-number__field {
+  width: 114px;
+  border: 1px solid #f0f0f0;
+  transform: translateY(1px);
+}
+
+.jq-number__field input {
+  width: 100%;
+  height: 50px;
+  border: none;
+  outline: none;
+  color: $title;
+  @extend %quicksand-500;
+  text-align: center;
+}
+
+.jq-number {
+  padding: 0;
+  position: relative;
+}
+
+.jq-number__spin {
+  position: absolute;
+  cursor: pointer;
+  height: 12px;
+  width: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.jq-number__spin.minus {
+  left: 15px;
+}
+.jq-number__spin.plus {
+  right: 15px;
+}
+
+.jq-number__spin::after {
+  content: "";
+  position: absolute;
+  top: 6px;
+  left: 0;
+  width: 13px;
+  height: 1px;
+  background-color: $title;
+}
+.jq-number__spin.plus::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 6px;
+  width: 1px;
+  height: 13px;
+  background-color: $title;
 }
 
 .blog-page {
@@ -531,4 +618,101 @@
 }
 .star {
   margin: 0 auto;
+}
+
+@media (max-width: 1230px) {
+  .shop {
+    &__inner {
+      display: block;
+    }
+    &__filters {
+      width: 100%;
+      margin-right: 0;
+      display: none;
+      position: absolute;
+      top: 20px;
+      left: 0;
+      z-index: 100;
+      background-color: #fff;
+    }
+    &__filter-btn {
+      display: block;
+      border: none;
+      background-color: $default;
+      padding: 0;
+      width: 60px;
+      height: 60px;
+      position: fixed;
+      right: 0;
+      z-index: 101;
+      bottom: 50px;
+      border-radius: 50%;
+      cursor: pointer;
+      &.shop__filter-btn {
+        &:hover {
+          path {
+            fill: $accent;
+          }
+        }
+      }
+    }
+  }
+  .shop-content {
+    &__inner {
+      display: grid;
+      grid-gap: 30px;
+      grid-template-columns: repeat(3, 1fr);
+    }
+    &__nogrid {
+      display: flex;
+    }
+  }
+}
+@media (max-width: 1050px) {
+  .product-item {
+    &__img-box {
+      height: 305px;
+    }
+  }
+}
+
+@media (max-width: 860px) {
+  .shop-content {
+    &__inner {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .shop-content {
+    &__filter-buttons {
+      display: none;
+    }
+    &__filter {
+      padding: 20px 25px 20px 0;
+    }
+  }
+}
+
+@media (max-width: 620px) {
+  .product-item {
+    max-width: 100%;
+    &__images {
+      width: 100%;
+    }
+  }
+  .shop-content {
+    &__inner {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .pagination {
+    &__arrows {
+      display: none;
+    }
+  }
 }
